[gd_scene load_steps=3 format=3 uid="uid://cuv2s1wq50ruf"]

[ext_resource type="Script" path="res://Objects/Objectives/Objective Capture Area/objective_capture_area.gd" id="1_x7ahw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xqmy8"]
radius = 100.0

[node name="Objective Capture Area" type="Node2D"]
script = ExtResource("1_x7ahw")

[node name="Objective Area" type="Area2D" parent="."]
light_mask = 3
visibility_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objective Area"]
light_mask = 3
visibility_layer = 3
shape = SubResource("CircleShape2D_xqmy8")
debug_color = Color(0.913725, 0.423529, 0, 0.419608)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Objective Area" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Objective Area" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
